--- a/website/index.html
+++ b/website/index.html
@@ -77,7 +77,7 @@
       <div class="col-lg-6 text-center text-lg-left">
         <h4 class="text-white mb-4 mt-5 mt-lg-0">Klerksdorp</h4>
         <h1 class="display-3 font-weight-bold text-white">
-          Welkom by Laerskool Goudkop
+          Welkom by Laerskool Saamwerk
         </h1>
         <p class="text-white mb-4">
           By Goudkop is die missie om gelukkige leerders te vorm, kwaliteit onderrig te voorsien, ouers te ondersteun,
@@ -551,10 +551,10 @@
   <!-- Blog End -->
 
   <!-- Footer Start -->
-  <div class="container-fluid bg-secondary text-white mt-5 py-5 px-sm-3 px-md-5">
+  <div class="container-fluid bg-primary text-white mt-5 py-5 px-sm-3 px-md-5">
     <div class="row pt-5">
       <div class="col-lg-3 col-md-6 mb-5">
-        <a href="" class="navbar-brand font-weight-bold text-primary m-0 mb-4 p-0"
+        <a href="" class="navbar-brand font-weight-bold text-tertiary m-0 mb-4 p-0"
           style="font-size: 40px; line-height: 40px">
           <i class="flaticon-043-teddy-bear"></i>
           <span class="text-white">KidKinder</span>
