--- a/website/index.html
+++ b/website/index.html
@@ -3,17 +3,19 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>KidKinder - Kindergarten Website Template</title>
+  <title>Learskool Goudkop</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
   <meta content="Free HTML Templates" name="keywords" />
   <meta content="Free HTML Templates" name="description" />
 
   <!-- Favicon -->
-  <link href="img/favicon.ico" rel="icon" />
+  <link href="img/logo-1.jpg" rel="icon" />
 
   <!-- Google Web Fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link href="https://fonts.googleapis.com/css2?family=Handlee&family=Nunito&display=swap" rel="stylesheet" />
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
   <!-- Font Awesome -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet" />
@@ -72,22 +74,25 @@
   <!-- Navbar End -->
 
   <!-- Header Start -->
-  <div class="container-fluid bg-primary px-md-5 mb-5">
-    <div class="row align-items-center px-3">
-      <div class="col-lg-6 text-center text-lg-left">
+  <div class="container-fluid bg-primary mb-5">
+    <div class="row align-items-center">
+      <!-- Text area column -->
+      <div class="col-lg-6 text-center mb-3 text-lg-left">
         <h4 class="text-white mb-4 mt-5 mt-lg-0">Klerksdorp</h4>
         <h1 class="display-3 font-weight-bold text-white">
-          Welkom by Laerskool Saamwerk
+          Welkom by Laerskool Goudkop
         </h1>
         <p class="text-white mb-4">
           By Goudkop is die missie om gelukkige leerders te vorm, kwaliteit onderrig te voorsien, ouers te ondersteun,
           Christelike waardes te handhaaf en individuele potensiaal te ontwikkel. Kernwaardes sluit in trots,
           eerlikheid, geduld, respek, omgee en gehoorsaamheid.
         </p>
-        <a href="" class="btn btn-secondary mt-1 py-3 px-5">Learn More</a>
+        <a href="about.html" class="btn btn-secondary mt-1 py-3 px-5">Inligting</a>
       </div>
-      <div class="col-lg-6 text-center text-lg-right">
-        <img class="img-fluid " src="img/drakie-1.jpg" alt="" />
+  
+      <!-- Image column -->
+      <div class="col-lg-6 text-lg-right p-0">
+        <img class="img-fluid" src="img/drakie-1.jpg" alt="Image Description" />
       </div>
     </div>
   </div>
@@ -213,7 +218,7 @@
               </ul>
             </div>
           </div>
-          <a href="" class="btn btn-primary mt-2 py-2 px-4">Learn More</a>
+          <a href="about.html" class="btn btn-secondary mt-2 py-2 px-4">Inligting</a>
         </div>
       </div>
     </div>
@@ -272,9 +277,9 @@
       <div class="row align-items-center">
         <div class="col-lg-7 mb-5 mb-lg-0">
           <p class="section-title pr-5">
-            <span class="pr-2">Book A Seat</span>
+            <span class="pr-2">Kontak</span>
           </p>
-          <h1 class="mb-4">Book A Seat For Your Kid</h1>
+          <h1 class="mb-4">Kontak ons gerus</h1>
           <p>
             Invidunt lorem justo sanctus clita. Erat lorem labore ea, justo
             dolor lorem ipsum ut sed eos, ipsum et dolor kasd sit ea justo.
@@ -295,7 +300,22 @@
               elitripsum vero.
             </li>
           </ul>
-          <a href="" class="btn btn-primary mt-4 py-2 px-4">Book Now</a>
+          <div class="" style="max-width: 280px;">
+            <a href="/aws-static-website/website/downloads/goudkop-inskrywingsvorm.pdf"
+              class="btn btn-secondary mt-4 py-2 px-4 d-flex align-items-center w-100">
+              <span class="material-symbols-outlined">
+                download
+              </span>
+              <span class="text-white mx-2">Aansoek form</span>
+            </a>
+            <a href="/aws-static-website/website/downloads/goudkop-inskrywingsvorm.pdf"
+              class="btn btn-secondary mt-4 py-2 px-4 d-flex align-items-center w-100">
+              <span class="material-symbols-outlined">
+                download
+              </span>
+              <span class="text-white mx-2">Naskool Aansoek form</span>
+            </a>
+          </div>
         </div>
         <div class="col-lg-5">
           <div class="card border-0">
@@ -344,7 +364,7 @@
       <div class="row">
         <div class="col-md-6 col-lg-3 text-center team mb-5">
           <div class="position-relative overflow-hidden mb-4" style="border-radius: 100%">
-            <img class="img-fluid w-100" src="img/team-1.jpg" alt="" />
+            <img class="img-fluid w-100" src="img/personeel-1.jpg" alt="" />
             <div class="team-social d-flex align-items-center justify-content-center w-100 h-100 position-absolute">
               <a class="btn btn-outline-light text-center mr-2 px-0" style="width: 38px; height: 38px" href="#"><i
                   class="fab fa-twitter"></i></a>
@@ -354,12 +374,12 @@
                   class="fab fa-linkedin-in"></i></a>
             </div>
           </div>
-          <h4>Julia Smith</h4>
-          <i>Music Teacher</i>
+          <h4>Mnr. Jaco Zevenster</h4>
+          <i>Skoolhoof</i>
         </div>
         <div class="col-md-6 col-lg-3 text-center team mb-5">
           <div class="position-relative overflow-hidden mb-4" style="border-radius: 100%">
-            <img class="img-fluid w-100" src="img/team-2.jpg" alt="" />
+            <img class="img-fluid w-100" src="img/personeel-2.jpg" alt="" />
             <div class="team-social d-flex align-items-center justify-content-center w-100 h-100 position-absolute">
               <a class="btn btn-outline-light text-center mr-2 px-0" style="width: 38px; height: 38px" href="#"><i
                   class="fab fa-twitter"></i></a>
@@ -369,12 +389,12 @@
                   class="fab fa-linkedin-in"></i></a>
             </div>
           </div>
-          <h4>Jhon Doe</h4>
-          <i>Language Teacher</i>
+          <h4>Mnr. André le Grange</h4>
+          <i>Adjunkhoof</i>
         </div>
         <div class="col-md-6 col-lg-3 text-center team mb-5">
           <div class="position-relative overflow-hidden mb-4" style="border-radius: 100%">
-            <img class="img-fluid w-100" src="img/team-3.jpg" alt="" />
+            <img class="img-fluid w-100" src="img/personeel-3.jpg" alt="" />
             <div class="team-social d-flex align-items-center justify-content-center w-100 h-100 position-absolute">
               <a class="btn btn-outline-light text-center mr-2 px-0" style="width: 38px; height: 38px" href="#"><i
                   class="fab fa-twitter"></i></a>
@@ -384,12 +404,12 @@
                   class="fab fa-linkedin-in"></i></a>
             </div>
           </div>
-          <h4>Mollie Ross</h4>
-          <i>Dance Teacher</i>
+          <h4>Mnr. Lukas Davidtz</h4>
+          <i>DPS</i>
         </div>
         <div class="col-md-6 col-lg-3 text-center team mb-5">
           <div class="position-relative overflow-hidden mb-4" style="border-radius: 100%">
-            <img class="img-fluid w-100" src="img/team-4.jpg" alt="" />
+            <img class="img-fluid w-100" src="img/personeel-4.jpg" alt="" />
             <div class="team-social d-flex align-items-center justify-content-center w-100 h-100 position-absolute">
               <a class="btn btn-outline-light text-center mr-2 px-0" style="width: 38px; height: 38px" href="#"><i
                   class="fab fa-twitter"></i></a>
@@ -399,8 +419,8 @@
                   class="fab fa-linkedin-in"></i></a>
             </div>
           </div>
-          <h4>Donald John</h4>
-          <i>Art Teacher</i>
+          <h4>Mnr. André Ouwencamp</h4>
+          <i>DPO</i>
         </div>
       </div>
     </div>
@@ -412,9 +432,9 @@
     <div class="container p-0">
       <div class="text-center pb-2">
         <p class="section-title px-5">
-          <span class="px-2">Testimonial</span>
+          <span class="px-2">Ons boodskap</span>
         </p>
-        <h1 class="mb-4">What Parents Say!</h1>
+        <h1 class="mb-4">Ouers en onnies!</h1>
       </div>
       <div class="owl-carousel testimonial-carousel">
         <div class="testimonial-item px-3">
@@ -483,21 +503,16 @@
     <div class="container">
       <div class="text-center pb-2">
         <p class="section-title px-5">
-          <span class="px-2">Latest Blog</span>
+          <span class="px-2">Meer van ons</span>
         </p>
-        <h1 class="mb-4">Latest Articles From Blog</h1>
+        <h1 class="mb-4">Leer meer van Learskool Goudkop</h1>
       </div>
       <div class="row pb-3">
         <div class="col-lg-4 mb-4">
           <div class="card border-0 shadow-sm mb-2">
             <img class="card-img-top mb-2" src="img/blog-1.jpg" alt="" />
             <div class="card-body bg-light text-center p-4">
-              <h4 class="">Diam amet eos at no eos</h4>
-              <div class="d-flex justify-content-center mb-3">
-                <small class="mr-3"><i class="fa fa-user text-primary"></i> Admin</small>
-                <small class="mr-3"><i class="fa fa-folder text-primary"></i> Web Design</small>
-                <small class="mr-3"><i class="fa fa-comments text-primary"></i> 15</small>
-              </div>
+              <h4 class="">Graad R en RR</h4>
               <p>
                 Sed kasd sea sed at elitr sed ipsum justo, sit nonumy diam
                 eirmod, duo et sed sit eirmod kasd clita tempor dolor stet
@@ -511,12 +526,7 @@
           <div class="card border-0 shadow-sm mb-2">
             <img class="card-img-top mb-2" src="img/blog-2.jpg" alt="" />
             <div class="card-body bg-light text-center p-4">
-              <h4 class="">Diam amet eos at no eos</h4>
-              <div class="d-flex justify-content-center mb-3">
-                <small class="mr-3"><i class="fa fa-user text-primary"></i> Admin</small>
-                <small class="mr-3"><i class="fa fa-folder text-primary"></i> Web Design</small>
-                <small class="mr-3"><i class="fa fa-comments text-primary"></i> 15</small>
-              </div>
+              <h4 class="">Ons visie en missie</h4>
               <p>
                 Sed kasd sea sed at elitr sed ipsum justo, sit nonumy diam
                 eirmod, duo et sed sit eirmod kasd clita tempor dolor stet
@@ -530,12 +540,7 @@
           <div class="card border-0 shadow-sm mb-2">
             <img class="card-img-top mb-2" src="img/blog-3.jpg" alt="" />
             <div class="card-body bg-light text-center p-4">
-              <h4 class="">Diam amet eos at no eos</h4>
-              <div class="d-flex justify-content-center mb-3">
-                <small class="mr-3"><i class="fa fa-user text-primary"></i> Admin</small>
-                <small class="mr-3"><i class="fa fa-folder text-primary"></i> Web Design</small>
-                <small class="mr-3"><i class="fa fa-comments text-primary"></i> 15</small>
-              </div>
+              <h4 class="">Ons skool terrein</h4>
               <p>
                 Sed kasd sea sed at elitr sed ipsum justo, sit nonumy diam
                 eirmod, duo et sed sit eirmod kasd clita tempor dolor stet
@@ -552,92 +557,75 @@
 
   <!-- Footer Start -->
   <div class="container-fluid bg-primary text-white mt-5 py-5 px-sm-3 px-md-5">
-    <div class="row pt-5">
-      <div class="col-lg-3 col-md-6 mb-5">
-        <a href="" class="navbar-brand font-weight-bold text-tertiary m-0 mb-4 p-0"
-          style="font-size: 40px; line-height: 40px">
-          <i class="flaticon-043-teddy-bear"></i>
-          <span class="text-white">KidKinder</span>
-        </a>
+    <div class="row pt-6">
+      <div class="col-lg-4 col-md-6 mb-5">
+        <div class="navbar-brand d-flex align-items-center font-weight-bold text-tertiary m-0 mb-4 p-0"
+          style="font-size: 40px;">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="img/logo-1.jpg" alt="Laerskool Goudkop Logo" />
+          <span class="text-white">Learskool Goudkop</span>
+        </div>
         <p>
-          Labore dolor amet ipsum ea, erat sit ipsum duo eos. Volup amet ea
-          dolor et magna dolor, elitr rebum duo est sed diam elitr. Stet elitr
-          stet diam duo eos rebum ipsum diam ipsum elitr.
+          By Goudkop is die missie om gelukkige leerders te vorm, kwaliteit onderrig te voorsien, ouers te ondersteun,
+          Christelike waardes te handhaaf en individuele potensiaal te ontwikkel. Kernwaardes sluit in trots,
+          eerlikheid, geduld, respek, omgee en gehoorsaamheid.
         </p>
         <div class="d-flex justify-content-start mt-4">
-          <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px"
+          <a class="btn btn-outline-secondary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px"
             href="#"><i class="fab fa-twitter"></i></a>
-          <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px"
+          <a class="btn btn-outline-secondary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px"
             href="#"><i class="fab fa-facebook-f"></i></a>
-          <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px"
+          <a class="btn btn-outline-secondary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px"
             href="#"><i class="fab fa-linkedin-in"></i></a>
-          <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px"
+          <a class="btn btn-outline-secondary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px"
             href="#"><i class="fab fa-instagram"></i></a>
         </div>
       </div>
       <div class="col-lg-3 col-md-6 mb-5">
-        <h3 class="text-primary mb-4">Get In Touch</h3>
+        <h3 class="text-secondary mb-4">Kontak ons</h3>
         <div class="d-flex">
-          <h4 class="fa fa-map-marker-alt text-primary"></h4>
+          <h4 class="fa fa-map-marker-alt text-secondary"></h4>
           <div class="pl-3">
             <h5 class="text-white">Address</h5>
-            <p>123 Street, New York, USA</p>
+            <p>34 May Ave, Adamayview, Klerksdorp, 2571</p>
           </div>
         </div>
         <div class="d-flex">
-          <h4 class="fa fa-envelope text-primary"></h4>
+          <h4 class="fa fa-envelope text-secondary"></h4>
           <div class="pl-3">
-            <h5 class="text-white">Email</h5>
-            <p>info@example.com</p>
+            <h5 class="text-white">Epos</h5>
+            <p>info@laerskoolgoudkop.co.za</p>
           </div>
         </div>
         <div class="d-flex">
-          <h4 class="fa fa-phone-alt text-primary"></h4>
+          <h4 class="fa fa-phone-alt text-secondary"></h4>
           <div class="pl-3">
-            <h5 class="text-white">Phone</h5>
-            <p>+012 345 67890</p>
+            <h5 class="text-white">Tel</h5>
+            <p>+018 468 1038/9</p>
           </div>
         </div>
       </div>
-      <div class="col-lg-3 col-md-6 mb-5">
-        <h3 class="text-primary mb-4">Quick Links</h3>
-        <div class="d-flex flex-column justify-content-start">
-          <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Home</a>
-          <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>About Us</a>
-          <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Our Classes</a>
-          <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Our Teachers</a>
-          <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Our Blog</a>
-          <a class="text-white" href="#"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
+      <div class="col-lg-5 col-md-6 mb-5">
+        <h3 class="text-secondary mb-4">Kom kuier !</h3>
+        <div style="position: relative; width: 100%; padding-bottom: 45%; height: 0; overflow: hidden;">
+          <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 0;" loading="lazy"
+            allowfullscreen
+            src="https://www.google.com/maps/embed/v1/search?q=Learskool%20Goudkop&key=AIzaSyB53m9qiACepTj5UGtFofA0S11qic1S1Gg">
+          </iframe>
         </div>
-      </div>
-      <div class="col-lg-3 col-md-6 mb-5">
-        <h3 class="text-primary mb-4">Newsletter</h3>
-        <form action="">
-          <div class="form-group">
-            <input type="text" class="form-control border-0 py-4" placeholder="Your Name" required="required" />
-          </div>
-          <div class="form-group">
-            <input type="email" class="form-control border-0 py-4" placeholder="Your Email" required="required" />
-          </div>
-          <div>
-            <button class="btn btn-primary btn-block border-0 py-3" type="submit">
-              Submit Now
-            </button>
-          </div>
-        </form>
       </div>
     </div>
-    <div class="container-fluid pt-5" style="border-top: 1px solid rgba(23, 162, 184, 0.2) ;">
+    <div class="container-fluid pt-5" style="border-top: 1px solid rgba(0, 0, 0, 0.147) ;">
       <p class="m-0 text-center text-white">
         &copy;
-        <a class="text-primary font-weight-bold" href="#">Your Site Name</a>.
+        <a class="text-secondary font-weight-bold"
+          href="https://www.linkedin.com/in/gerrit-visser-software-engineer/">Gerni Visser</a>.
         All Rights Reserved.
 
         <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
         Designed by
-        <a class="text-primary font-weight-bold" href="https://htmlcodex.com">HTML Codex</a>
+        <a class="text-secondary" href="https://htmlcodex.com">HTML Codex</a>
         <br />Distributed By:
-        <a href="https://themewagon.com" target="_blank">ThemeWagon</a>
+        <a class="text-secondary" href="https://themewagon.com">ThemeWagon</a>
       </p>
     </div>
   </div>
