--- a/website/index.html
+++ b/website/index.html
@@ -33,51 +33,14 @@
 
 <body>
   <!-- Navbar Start -->
-  <div class="container-fluid bg-light position-relative shadow">
-    <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0 px-lg-5">
-      <div class="row justify-content-center align-items-center text-center">
-        <div class="col-12 col-md-auto">
-          <img class="img-fluid rounded mb-3 mb-md-0" src="img/logo-1.jpg" alt="Laerskool Goudkop Logo" />
-        </div>
-        <div class="col-12 col-md-auto">
-          <span class="text-primary font-weight-bold display-4">Laerskool Goudkop</span>
-        </div>
-      </div>
-      <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-        <div class="navbar-nav font-weight-bold mx-auto py-0">
-          <a href="index.html" class="nav-item nav-link active">Tuis</a>
-          <a href="about.html" class="nav-item nav-link">Inligting</a>
-          <a href="class.html" class="nav-item nav-link">Klasse</a>
-          <a href="team.html" class="nav-item nav-link">Onnies</a>
-          <a href="gallery.html" class="nav-item nav-link">Fotos</a>
-          <!-- <div class="nav-item dropdown">
-              <a
-                href="#"
-                class="nav-link dropdown-toggle"
-                data-toggle="dropdown"
-                >Pages</a
-              >
-              <div class="dropdown-menu rounded-0 m-0">
-                <a href="blog.html" class="dropdown-item">Blog Grid</a>
-                <a href="single.html" class="dropdown-item">Blog Detail</a>
-              </div>
-            </div> -->
-          <!-- <a href="contact.html" class="nav-item nav-link">Kontak</a> -->
-        </div>
-        <a href="contact.html" class="btn btn-primary px-4">Kontak</a>
-      </div>
-    </nav>
-  </div>
+  <div id="header-placeholder"></div>
   <!-- Navbar End -->
 
   <!-- Header Start -->
   <div class="container-fluid bg-primary mb-5">
     <div class="row align-items-center">
       <!-- Text area column -->
-      <div class="col-lg-6 text-center mb-3 text-lg-left">
+      <div class="col-lg-6 text-center mb-3 px-4 text-lg-left">
         <h4 class="text-white mb-4 mt-5 mt-lg-0">Klerksdorp</h4>
         <h1 class="display-3 font-weight-bold text-white">
           Welkom by Laerskool Goudkop
@@ -89,7 +52,7 @@
         </p>
         <a href="about.html" class="btn btn-secondary mt-1 py-3 px-5">Inligting</a>
       </div>
-  
+
       <!-- Image column -->
       <div class="col-lg-6 text-lg-right p-0">
         <img class="img-fluid" src="img/drakie-1.jpg" alt="Image Description" />
@@ -556,79 +519,7 @@
   <!-- Blog End -->
 
   <!-- Footer Start -->
-  <div class="container-fluid bg-primary text-white mt-5 py-5 px-sm-3 px-md-5">
-    <div class="row pt-6">
-      <div class="col-lg-4 col-md-6 mb-5">
-        <div class="navbar-brand d-flex align-items-center font-weight-bold text-tertiary m-0 mb-4 p-0"
-          style="font-size: 40px;">
-          <img class="img-fluid rounded mb-3 mb-md-0" src="img/logo-1.jpg" alt="Laerskool Goudkop Logo" />
-          <span class="text-white">Learskool Goudkop</span>
-        </div>
-        <p>
-          By Goudkop is die missie om gelukkige leerders te vorm, kwaliteit onderrig te voorsien, ouers te ondersteun,
-          Christelike waardes te handhaaf en individuele potensiaal te ontwikkel. Kernwaardes sluit in trots,
-          eerlikheid, geduld, respek, omgee en gehoorsaamheid.
-        </p>
-        <div class="d-flex justify-content-start mt-4">
-          <a class="btn btn-outline-secondary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px"
-            href="#"><i class="fab fa-twitter"></i></a>
-          <a class="btn btn-outline-secondary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px"
-            href="#"><i class="fab fa-facebook-f"></i></a>
-          <a class="btn btn-outline-secondary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px"
-            href="#"><i class="fab fa-linkedin-in"></i></a>
-          <a class="btn btn-outline-secondary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px"
-            href="#"><i class="fab fa-instagram"></i></a>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-6 mb-5">
-        <h3 class="text-secondary mb-4">Kontak ons</h3>
-        <div class="d-flex">
-          <h4 class="fa fa-map-marker-alt text-secondary"></h4>
-          <div class="pl-3">
-            <h5 class="text-white">Address</h5>
-            <p>34 May Ave, Adamayview, Klerksdorp, 2571</p>
-          </div>
-        </div>
-        <div class="d-flex">
-          <h4 class="fa fa-envelope text-secondary"></h4>
-          <div class="pl-3">
-            <h5 class="text-white">Epos</h5>
-            <p>info@laerskoolgoudkop.co.za</p>
-          </div>
-        </div>
-        <div class="d-flex">
-          <h4 class="fa fa-phone-alt text-secondary"></h4>
-          <div class="pl-3">
-            <h5 class="text-white">Tel</h5>
-            <p>+018 468 1038/9</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-5 col-md-6 mb-5">
-        <h3 class="text-secondary mb-4">Kom kuier !</h3>
-        <div style="position: relative; width: 100%; padding-bottom: 45%; height: 0; overflow: hidden;">
-          <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 0;" loading="lazy"
-            allowfullscreen
-            src="https://www.google.com/maps/embed/v1/search?q=Learskool%20Goudkop&key=AIzaSyB53m9qiACepTj5UGtFofA0S11qic1S1Gg">
-          </iframe>
-        </div>
-      </div>
-    </div>
-    <div class="container-fluid pt-5" style="border-top: 1px solid rgba(0, 0, 0, 0.147) ;">
-      <p class="m-0 text-center text-white">
-        &copy;
-        <a class="text-secondary font-weight-bold"
-          href="https://www.linkedin.com/in/gerrit-visser-software-engineer/">Gerni Visser</a>.
-        All Rights Reserved.
-
-        <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-        Designed by
-        <a class="text-secondary" href="https://htmlcodex.com">HTML Codex</a>
-        <br />Distributed By:
-        <a class="text-secondary" href="https://themewagon.com">ThemeWagon</a>
-      </p>
-    </div>
-  </div>
+  <div id="footer-placeholder"></div>
   <!-- Footer End -->
 
   <!-- Back to Top -->
